# gb-emu

./: .gitignore  Cargo.toml  README.md
src/: bootrom.rs  cartridge.rs  cpu.rs  hram.rs  lcd.rs  lib.rs  main.rs  mbc.rs  peripherals.rs  ppu.rs  registers.rs
src/cpu/: instructions.rs  interrupts.rs  operand.rs
