[package]
name = "gb-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"

[dependencies.sdl2]
version = "0.35.2"
features = ["bundled","raw-window-handle","static-link"]
